--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
        "'an antarctic mystery by jules verne the project gutenberg ebook of an antarctic mystery by jules verne this ebook is for the use of anyone anywhere at no cost and with almost no restrictions whatsoeve'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,10 +73,10 @@
     "AntarcticMysteryText = AntarcticMysteryText.encode('ascii','ignore')\n",
     "\n",
     "# converting all case to lower\n",
-    "AntarcticMysteryTexts = AntarcticMysteryText.lower()\n",
+    "AntarcticMysteryText = AntarcticMysteryText.lower()\n",
     "\n",
     "# My variable is a massive string\n",
-    "AntarcticMysteryTexts[:200]"
+    "AntarcticMysteryText[:200]"
    ]
   },
   {
