Changed the name of the file

--- a/Zip's Law Example.ipynb
+++ b/Zip's Law Example.ipynb
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "# removing punctuation using regular a expression\n",
+    "# removing punctuation using a regular expression\n",
     "import re\n",
     "AntarcticMysteryText = re.sub(r'[^\\w\\s]','',AntarcticMysteryText)"
    ]
